Jump around to show the correct card

--- a/src/frontend/stylesheets/index.css
+++ b/src/frontend/stylesheets/index.css
@@ -16,18 +16,20 @@ body {
 }
 
 .root {
-	height: 100%;
-	overflow: auto;
+    display: flex;
+    height: 100%;
+    overflow: auto;
+    flex-direction: column;
+}
+
+demo-card-list {
+    display: block;
+    flex: 1 1 auto;
+    overflow: auto;
 }
 
 demo-card-list > div {
 	width: 57%;
 	margin: 0 auto;
 	font-size: 2rem;
-	margin-top: 6rem;
-}
-
-demo-header md-toolbar {
-	position: fixed;
-	width: 100%;
 }
